# es-vector-store

./: .gitignore  README.md  docker-compose.yaml  explore.ipynb  pyproject.toml
charts/elasticsearch/: Chart.yaml  values.yaml
charts/elasticsearch/templates/: _helpers.tpl  deployment.yaml
es_vector_store/: __init__.py
es_vector_store/utils/: exclusive_args.py  project.py
