[tool.poetry]
name = "es-vector-store"
version = "0.1.0"
description = "A local vector search service using ElasticSearch."
authors = ["ltbringer <amresh.venugopal@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "es_vector_store"}]

[tool.poetry.dependencies]
python = ">=3.9"
elasticsearch = "8.12.1"
pydantic = "^2.6.2"
toml = "^0.10.2"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
